# ADAMIXTURE

./: .gitattributes  .gitignore  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  tests.yml
adamixture/: __init__.py  _version.py  entry.py  plot.py  plot_entry.py  project_entry.py  supervised_entry.py
adamixture/demo/: generate_device_expected.py
adamixture/demo/data/: demo_data.bcf  demo_data.bcf.zst
adamixture/demo/outputs/mps/adamem/: demo_run.adamem.P.expected  demo_run.adamem.Q.expected  demo_run.als.P.expected  demo_run.als.Q.expected
adamixture/demo/outputs/mps/brqn/: demo_run.brqn.P.expected  demo_run.brqn.Q.expected  demo_run.svd.S.expected  demo_run.svd.U.expected  demo_run.svd.V.expected
adamixture/eval/: evaluation.py  stability.py
adamixture/model/: adamixture.py  als.py  als_gpu.py  br_qn.py  br_qn_gpu.py  cross.py  em_adam.py  em_adam_gpu.py  svd.py  svd_gpu.py
adamixture/model/__test__/: test_initializations.py  test_switchers.py
adamixture/src/: adamixture.py  cv.py  evaluation.py  main.py  plot.py  projection.py  snp_reader.py  supervised.py  svd.py  svd_gpu.py  utils.py
adamixture/src/utils_c/: __init__.py  em.c  em.pyx  rsvd.c  tools.c  tools.pyx
adamixture/src/utils_c/cuda/: bvls_kernel.cu  cv_mask_kernel.cu  pack2bit.cu  sqp_kernel.cu
adamixture/src/utils_c/cython/: br_qn.pyx  bvls.pyx  em.pyx  snp_reader.pyx  sqp.pyx  tools.pyx
adamixture/src/utils_c/metal/: __init__.py  bvls_kernel.metal  pack2bit.metal  sqp_kernel.metal
docs/: cross_validation.md  plotting.md  projection.md  supervised.md  troubleshooting.md
tests/: conftest.py  helpers.py  test_cuda.py  test_mps.py  test_reader.py  test_smoke.py
