[build-system]
requires = [
    "setuptools >= 61.0",
    "setuptools_scm[toml]>=6.2",
    "Cython>=3.0.0",
    "numpy>=2.0.0",
    "scikit-allel>=1.3.8",
    "matplotlib>=3.5.0",
    "pgenlib>=0.93.0"
]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--ignore=adamixture/entry.py"
testpaths = ["tests"]

[tool.setuptools_scm]
write_to = "adamixture/_version.py"
fallback_version = "0.1.0"
