[metadata]
name = adamixture
author = Joan Saurina Ricós
author_email = joansaurinaricos@gmail.com
license = CC BY-NC 4.0
description = ADAMIXTURE: Adaptive First-Order Optimization for Biobank-Scale Ancestry Inference
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AI-sandbox/adamixture
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
[options]
packages = find:
install_requires =
    configargparse>=1.5.3
    Cython>3.0.0
    numpy>2.0.0
    matplotlib>=3.5.0
    setuptools>=61.0
    torch>=2.0.0
    scikit-allel>=1.3.8
    pgenlib>=0.93.0
python_requires = >=3.10
include_package_data = True

[options.package_data]
* = *.cu, *.pyx

[options.entry_points]
console_scripts =
    adamixture = adamixture.entry:main

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-mock

[flake8]
ignore = E116, E501, E203
